--- a/css/mobile_style.css
+++ b/css/mobile_style.css
@@ -170,14 +170,14 @@
     margin-right: 15px;
     margin-left: 15px;
     height: 32.5em;
-    padding: 0 20px 0;
+    padding: 0 30px 0;
 
 
   }
 
-  .shop__item:last-child {
+  /*.shop__item:last-child {
     margin-right: 15px;
-  }
+  }*/
 
   .shop-wrap {
     flex-wrap: wrap;
@@ -191,5 +191,6 @@
 }
   .shop-card{
     max-width: 285px;
+    padding: 0px 27px 0;
   }
 }
