--- a/css/popup_style.css
+++ b/css/popup_style.css
@@ -6,21 +6,22 @@
 	display: flex;
 	top: 0;
 	left:0;
-	justify-content: center;
-	align-items: center;
+	/*justify-content: center;
+	align-items: center;*/
 
 }
 
 
 .pop-up{
-	width: 390px;
-	height: 590px;
+	max-width: 390px;
+/*	height: 590px;*/
 	padding: 50px 30px;
 	display: flex;
 	flex-direction: column;
 	box-sizing: border-box;
 	position: relative;
 	background-color: #fff;
+	margin:auto;
 }
 
 .pop-up__close {
