--- a/css/popup_style.css
+++ b/css/popup_style.css
@@ -8,6 +8,7 @@
 	left:0;
 	/*justify-content: center;
 	align-items: center;*/
+	
 
 }
 
@@ -167,5 +168,11 @@
 	width: 100%;
 	margin-top: 25px;
 }
+
+@media (max-width: 640px){
+  .pop-up {
+    padding: 30px 20px;
+    max-width: 330px;
+   } 
 
 
