--- a/css/tablet_style.css
+++ b/css/tablet_style.css
@@ -1,12 +1,8 @@
 @media(min-width: 641px) and (max-width: 1200px){
   .header {
-/*  padding: 30px 0 120px;*/
-  background-image: url("../images/banner-bg-tablet.jpg");
+    background-image: url("../images/banner-bg-tablet.jpg");
+  }
   
-}
-  
-  
-
   .header-title{
     font-size: 40px;
     max-width: 650px;
@@ -67,20 +63,12 @@
   }
 
 
-  
-
-  /*.trend__item{
-    width: calc(50% - 4px);  
-  
-  }*/
-
   .news-title.trend-card__title{
     font-size: 17px;
   }
 
 
   .trend__item.trend__item-food{
-/*    margin-right: 0;*/
     margin-bottom: 4px;
   }
 
@@ -89,7 +77,7 @@
   }
 
   .main_conteiner{
-    margin: 0 20px 0;
+    margin: 0 35px 0;
   }
 
   .block-post{
@@ -110,23 +98,17 @@
 
   .text-post_music {
     padding: 0px 0 20px 0;
-    
-}
+  }
 
   .post-list{
     flex-direction: column;
     margin-bottom: 40px;
-
   }
 
-  /*.shop-block{
-    justify-content: center;
-  } */  
-  
+    
   .shop-card{
     bottom:-21px;
     height: 260px;
-
   }
 
     
@@ -148,12 +130,8 @@
   }
 
   .shop__item{
-    width: 342px;
-/*    height: 460px;*/
+    width: 338px;
   }
-
-  
-
     
 }
 
@@ -165,29 +143,23 @@
   .trend__item{
     width: calc(50% - 4px);
     height: 250px;
-
   }
   
   .trend__item.trend__item-food{
     margin-right: 0;
-    
   }
 
   .shop-wrap{
     flex-wrap: wrap;
-    
+    justify-content: space-between;
+    width: calc(100% - 70px);
   }
 
-
   .shop__item:nth-child(odd){
-    margin-right: 10px;
-    margin-left: 20px;
-    margin-bottom: 50px;
- }
+      margin: 0 10px 50px 0;
+  }
+
   .shop__item:nth-child(even){
-    margin-right: 20px;
-    margin-left: 10px;
-    margin-bottom: 50px;
- }
-  
+      margin: 0 0 50px 10px;
+  }
 }
