--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ body {
   margin-bottom: 63px;
   margin-right: auto;
   margin-left: auto;
-  justify-content: center;
+/*  justify-content: center;*/
   max-width:100%;
   
 }
@@ -590,7 +590,6 @@ body {
 
 .latest-post__title.shop__title{
   font-size: 20px;
-
 }
 
 .shop-block{
@@ -610,8 +609,8 @@ body {
 .shop__item{
   display: flex;
   width: 350px;
-  height: 440px;
-  position: relative;
+/*  min-height: 440px;*/
+  flex-direction: column;
   margin-right: 30px;
   margin-left: 30px;
   margin-bottom: 25px;
@@ -633,19 +632,18 @@ body {
 .shop-card{
   display: flex;
   flex-direction: column;
-/*  width: 300px;*/
-  height: 260px;
+  width: 100%;
+  height: 41.761%;
   border: 3px solid rgba(181, 159, 91, 0.6);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 0 22px 0;
+  align-self: center;
+  margin-top: -33px;
+  padding: 52px 23px 24px;
 }
 
 .news-title.shop-card__title{
   display: flex;
   padding-bottom: 0;
-  padding-top: 55px;
+  padding-top: 0;
   text-transform: uppercase;
 }
 
